# src/routes/eventos.routes.js
@@ -8,20 +8,24 @@ const {
   obtenerEventoPorId,
   eliminarEvento,
   finalizarEvento,
-  obtenerMisEventos
+  obtenerMisEventos,
+  generarReporteEvento
 } = require('../controllers/evento.controller');
 const authMiddleware = require('../middlewares/auth');
 
+router.get('/mis', authMiddleware(['docente', 'admin']), obtenerMisEventos);
+
 router.post('/crear', authMiddleware(['docente', 'admin']), crearEvento);
 
-router.get('/mis', authMiddleware(['docente', 'admin']), obtenerMisEventos);
 router.get('/', obtenerEventos);
+
 router.get('/:id', obtenerEventoPorId);
 
 router.put('/:id', authMiddleware(['docente', 'admin']), actualizarEvento);
 
 router.post('/:id/finalizar', authMiddleware(['docente', 'admin']), finalizarEvento);
 
+router.get('/:id/generarPDF', authMiddleware(['docente', 'admin']), generarReporteEvento);
 router.delete('/:id', authMiddleware(['docente', 'admin']), eliminarEvento);
 
 module.exports = router;
